# rUNSWift-2010-release

./: .gitignore  README
image/etc/: inittab  ntpd.conf
image/etc/init.d/: naoqi
image/etc/network/: interfaces
image/etc/ssh/: sshd_config
image/home/nao/: .bashrc  .profile
image/root/.ssh/: authorized_keys
robot/: .gitignore  CMakeLists.txt  bootstrap.cmake  libagent.cmake  main.cpp  runswift.cmake  testreceiver.cmake  testreceiver.cpp
robot/blackboard/: Blackboard.cpp  Blackboard.hpp  Blackboard.tcc
robot/gamecontroller/: GameController.cpp  GameController.hpp  RoboCupGameControlData.cpp  RoboCupGameControlData.hpp
robot/libagent/: AgentData.hpp  libagent.cpp  libagent.hpp
robot/motion/: MotionAdapter.cpp  MotionAdapter.hpp
robot/motion/effector/: AgentEffector.cpp  AgentEffector.hpp  Effector.hpp  NullEffector.hpp
robot/motion/generator/: ALWalkGenerator.cpp  ALWalkGenerator.hpp  ActionGenerator.cpp  ActionGenerator.hpp  ClippedGenerator.cpp  ClippedGenerator.hpp  DeadGenerator.cpp  DeadGenerator.hpp  DistributedGenerator.cpp  DistributedGenerator.hpp  FastWalkGenerator.cpp  FastWalkGenerator.hpp  Generator.hpp  GoalieSitGenerator.cpp  GoalieSitGenerator.hpp  HeadGenerator.cpp  HeadGenerator.hpp  KickGenerator.cpp  KickGenerator.hpp  NullGenerator.cpp  NullGenerator.hpp  RefPickupGenerator.cpp  RefPickupGenerator.hpp  SlowWalkGenerator.cpp  SlowWalkGenerator.hpp  StandGenerator.cpp  StandGenerator.hpp  WaveWalkGenerator.cpp  WaveWalkGenerator.hpp
robot/motion/touch/: AgentTouch.cpp  AgentTouch.hpp  FilteredTouch.cpp  FilteredTouch.hpp  NullTouch.cpp  NullTouch.hpp  Touch.hpp
robot/perception/: PerceptionThread.cpp  PerceptionThread.hpp
robot/perception/behaviour/: BehaviourAdapter.cpp  BehaviourAdapter.hpp  PoseTestSkill.cpp  PoseTestSkill.hpp  SafetySkill.cpp  SafetySkill.hpp  SensorLoggingSkill.cpp  SensorLoggingSkill.hpp  Skill.hpp  SkillParams.hpp  StartStopSkill.cpp  StartStopSkill.hpp
robot/perception/kinematics/: Kinematics.cpp  Kinematics.hpp  KinematicsAdapter.cpp  KinematicsAdapter.hpp  Pose.cpp  Pose.hpp
robot/perception/localisation/: BallFilter.cpp  BallFilter.hpp  FieldLineLocalisation.cpp  FieldLineLocalisation.hpp  KFilter.cpp  KFilter.hpp  LocalisationAdapter.cpp  LocalisationAdapter.hpp  LocalisationDefs.hpp  LocalisationUtils.cpp  LocalisationUtils.hpp  Localiser.hpp  PFilter.cpp  (+5 more)
robot/receiver/: Nao.cpp  Nao.hpp
robot/thread/: ThreadWatcher.cpp  ThreadWatcher.hpp  ThreadWatcher.tcc
robot/transmitter/: Nao.cpp  Nao.hpp  OffNao.cpp  OffNao.hpp  TransmitterDefs.hpp
robot/tvmet/: AliasProxy.h  BinaryFunctionals.h  CommaInitializer.h  CompileTimeError.h  Extremum.h  Functional.h  Io.h  LICENSE  Matrix.h  MatrixBinaryFunctions.h  MatrixFunctions.h  MatrixImpl.h  MatrixOperators.h  NumericTraits.h  RunTimeError.h  TvmetBase.h  TypePromotion.h  UnaryFunctionals.h  Vector.h  VectorBinaryFunctions.h  VectorEval.h  VectorFunctions.h  VectorImpl.h  VectorOperators.h  VectorUnaryFunctions.h  config.h  tvmet.h
robot/utils/: AbsCoord.hpp  ActionCommand.hpp  BroadcastData.hpp  ButtonPresses.hpp  ConcurrentMap.hpp  ConcurrentMap.tcc  Connection.cpp  Connection.hpp  Connection.tcc  JointValues.hpp  Line.hpp  Odometry.hpp  RRCoord.hpp  RobotObstacle.hpp  SPLDefs.hpp  SensorValues.hpp  Timer.hpp  XYZ_Coord.hpp  angles.hpp  basic_maths.hpp  basic_onullstream.hpp  body.hpp  compress.cpp  compress.hpp  incapacitated.hpp  log.cpp.template  log.hpp  matrix_helpers.cpp  matrix_helpers.hpp  options.cpp  options.hpp  speech.hpp
utils/: doxygen.cfg
utils/cameraCalibrator/: main.c
utils/ftp/: ftpwindow.cpp
utils/gprofThreads/: Makefile
utils/ioctltrap/: .gitignore  Makefile  NOTES  ioctltrap.c  naoqi.patch
utils/mapGenerator/: MapFileHeader.cpp  MapFileHeader.h  MapGenerator.cpp
utils/offnao/: CMakeLists.txt  frame.hpp  main.cpp  mediaPanel.cpp  naoData.hpp  runswift.cfg  visualiser.cpp  visualiser.hpp
utils/offnao/inverseVision/: inverseVision.cpp  inverseVision.hpp
utils/offnao/readers/: diskReader.cpp  diskReader.hpp  dumpReader.cpp  dumpReader.hpp  localisationReader.cpp  localisationReader.hpp  networkReader.cpp  networkReader.hpp  reader.hpp
utils/offnao/tabs/: PointCloud.cpp  PointCloud.hpp  calibrationTab.cpp  calibrationTab.hpp  cameraPoseTab.cpp  cameraPoseTab.hpp  cameraTab.cpp  classifier.cpp  classifier.hpp  fieldView.cpp  fieldView.hpp  graphTab.cpp  graphTab.hpp  histogram.cpp  histogram.hpp  jointsTab.cpp  overviewTab.cpp  overviewTab.hpp  plots.cpp  plots.hpp  sensorTab.cpp  sensorTab.hpp  tab.cpp  tab.hpp  variableView.cpp  variableView.hpp  visionTab.cpp  visionTab.hpp  zmpTab.cpp  zmpTab.hpp
(+136 files in other folders)
